src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__access_string_via_byte_array.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%baz = type { [11 x i8], i8*, [10 x i8]* }

@baz_instance = global %baz zeroinitializer

define void @baz(%baz* %0) {
entry:
  %str = getelementptr inbounds %baz, %baz* %0, i32 0, i32 0
  %ptr = getelementptr inbounds %baz, %baz* %0, i32 0, i32 1
  %bytes = getelementptr inbounds %baz, %baz* %0, i32 0, i32 2
  %1 = bitcast [11 x i8]* %str to i8*
  store i8* %1, i8** %ptr, align [filtered]
  %2 = bitcast [11 x i8]* %str to [10 x i8]*
  store [10 x i8]* %2, [10 x i8]** %bytes, align [filtered]
  ret void
}
