src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__allowed_assignable_types.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i16, [2 x i16], i16*, [2 x i16]* }

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %v = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %x = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %y = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %z = getelementptr inbounds %main, %main* %0, i32 0, i32 3
  store i16 0, i16* %v, align [filtered]
  %tmpVar = getelementptr inbounds [2 x i16], [2 x i16]* %x, i32 0, i32 0
  store i16 1, i16* %tmpVar, align [filtered]
  %deref = load i16*, i16** %y, align [filtered]
  store i16 2, i16* %deref, align [filtered]
  %deref1 = load i16*, i16** %y, align [filtered]
  %1 = load i16, i16* %deref1, align [filtered]
  %erase = and i16 %1, -3
  %or = or i16 %erase, 6
  store i16 %or, i16* %deref1, align [filtered]
  %deref2 = load [2 x i16]*, [2 x i16]** %z, align [filtered]
  %tmpVar3 = getelementptr inbounds [2 x i16], [2 x i16]* %deref2, i32 0, i32 0
  store i16 4, i16* %tmpVar3, align [filtered]
  %deref4 = load [2 x i16]*, [2 x i16]** %z, align [filtered]
  %tmpVar5 = getelementptr inbounds [2 x i16], [2 x i16]* %deref4, i32 0, i32 1
  %2 = load i16, i16* %tmpVar5, align [filtered]
  %erase6 = and i16 %2, -3
  %or7 = or i16 %erase6, 10
  store i16 %or7, i16* %tmpVar5, align [filtered]
  ret void
}
