src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__bool_and_or_expressions.snap
---
source: src/codegen/tests/expression_tests.rs
assertion_line: 414
expression: result

---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i8, i8, i8, i8 }

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  %a = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  %c = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 2
  %d = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 3
  %load_a = load i8, i8* %a, align 1
  %1 = icmp ne i8 %load_a, 0
  br i1 %1, label %2, label %4

2:                                                ; preds = %entry
  %load_b = load i8, i8* %b, align 1
  %3 = icmp ne i8 %load_b, 0
  br label %4

4:                                                ; preds = %2, %entry
  %5 = phi i1 [ %1, %entry ], [ %3, %2 ]
  %6 = zext i1 %5 to i8
  store i8 %6, i8* %c, align 1
  %load_a1 = load i8, i8* %a, align 1
  %7 = icmp ne i8 %load_a1, 0
  br i1 %7, label %10, label %8

8:                                                ; preds = %4
  %load_b2 = load i8, i8* %b, align 1
  %9 = icmp ne i8 %load_b2, 0
  br label %10

10:                                               ; preds = %8, %4
  %11 = phi i1 [ %7, %4 ], [ %9, %8 ]
  %12 = zext i1 %11 to i8
  store i8 %12, i8* %d, align 1
  ret void
}

