src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_div_ints.snap
---
source: src/codegen/tests/expression_tests.rs
expression: res
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define i32 @main() {
entry:
  %main = alloca i32, align [filtered]
  %x1 = alloca i32, align [filtered]
  %l1 = alloca i64, align [filtered]
  store i32 0, i32* %x1, align [filtered]
  store i64 0, i64* %l1, align [filtered]
  store i32 0, i32* %main, align [filtered]
  %load_x1 = load i32, i32* %x1, align [filtered]
  %0 = sext i32 %load_x1 to i64
  %load_l1 = load i64, i64* %l1, align [filtered]
  %tmpVar = sdiv i64 %0, %load_l1
  %main_ret = load i32, i32* %main, align [filtered]
  ret i32 %main_ret
}
