src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_move.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%main_interface = type { i32, i32 }

@main_instance = global %main_interface zeroinitializer

define void @main(%main_interface* %0) {
entry:
  %a = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 0
  %b = getelementptr inbounds %main_interface, %main_interface* %0, i32 0, i32 1
  %load_b = load i32, i32* %b, align 4
  %1 = sext i32 %load_b to i64
  %2 = trunc i64 %1 to i32
  store i32 %2, i32* %a, align 4
  ret void
}

