src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_mux_with_aggregate_type.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [81 x i8] }

@main_instance = global %main zeroinitializer
@utf08_literal_0 = private unnamed_addr constant [6 x i8] c"dolor\00"
@utf08_literal_1 = private unnamed_addr constant [6 x i8] c"ipsum\00"
@utf08_literal_2 = private unnamed_addr constant [6 x i8] c"lorem\00"
@utf08_literal_3 = private unnamed_addr constant [4 x i8] c"sit\00"

define void @main(%main* %0) {
entry:
  %str1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %1 = alloca [81 x i8], align [filtered]
  switch i32 3, label %continue_block [
    i32 0, label %2
    i32 1, label %4
    i32 2, label %6
    i32 3, label %8
  ]

2:                                                ; preds = %entry
  %3 = bitcast [81 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %3, i8* align [filtered] getelementptr inbounds ([6 x i8], [6 x i8]* @utf08_literal_2, i32 0, i32 0), i32 6, i1 false)
  br label %continue_block

4:                                                ; preds = %entry
  %5 = bitcast [81 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %5, i8* align [filtered] getelementptr inbounds ([6 x i8], [6 x i8]* @utf08_literal_1, i32 0, i32 0), i32 6, i1 false)
  br label %continue_block

6:                                                ; preds = %entry
  %7 = bitcast [81 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %7, i8* align [filtered] getelementptr inbounds ([6 x i8], [6 x i8]* @utf08_literal_0, i32 0, i32 0), i32 6, i1 false)
  br label %continue_block

8:                                                ; preds = %entry
  %9 = bitcast [81 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %9, i8* align [filtered] getelementptr inbounds ([4 x i8], [4 x i8]* @utf08_literal_3, i32 0, i32 0), i32 4, i1 false)
  br label %continue_block

continue_block:                                   ; preds = %entry, %8, %6, %4, %2
  %10 = bitcast [81 x i8]* %str1 to i8*
  %11 = bitcast [81 x i8]* %1 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i32(i8* align [filtered] %10, i8* align [filtered] %11, i32 80, i1 false)
  ret void
}

; Function Attrs: argmemonly nofree nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i32(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i32, i1 immarg) #0

attributes #0 = { argmemonly nofree nounwind willreturn }
